<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvElegir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika_new_basic_bold"
        android:text="@string/Elegir"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="20sp" />



    <Spinner
        android:id="@+id/spinnerFormulas"
        android:entries="@array/formulas"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/spinner_cars" />

    <ImageView
        android:id="@+id/ivFormulas"
        android:layout_width="262dp"
        android:layout_height="238dp"
        android:hint="@string/hint"
        android:src="@drawable/tension"
        android:textAlignment="center"
        android:contentDescription="@string/imagenElegida">

    </ImageView>

    <TextView
        android:id="@+id/tvSelect"
        android:fontFamily="@font/andika_new_basic_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Fórmula seleccionada" />

    <EditText
        android:id="@+id/a"
        android:fontFamily="@font/andika_new_basic_bold"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:background="#BFAEDC"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        tools:text="Ingresa un número" />

    <EditText
        android:id="@+id/b"
        android:fontFamily="@font/andika_new_basic_bold"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:background="#C16A9E"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        tools:text="Ingresa un número" />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="202dp"
        android:layout_height="58dp"
        android:backgroundTint="#4CAF50"
        android:fontFamily="@font/andika_new_basic_bold"
        android:onClick="click"
        android:text="@string/calcular"
        android:textAllCaps="false"
        android:textColor="#0D47A1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</LinearLayout>